--- a/README.org
+++ b/README.org
@@ -8,6 +8,12 @@ wget https://github.com/hardenedlinux/nix-fpm-multiuser/releases/download/197001
 sudo dpkg -i nix_3.0.pre19700101.master_amd64.deb
 #+end_src
 
+rpm user
+#+begin_src sh :async t :exports both :results output
+https://github.com/hardenedlinux/nix-fpm-multiuser/releases/download/Jan/nix-3.0.pre19700103.master-1.x86_64.rpm
+rpm -i nix-3.0.pre19700103.master-1.x86_64.rpm
+#+end_src
+
 
 or install from nixos
 #+begin_src sh :async t :exports both :results output
